# quota-watch

./: .gitignore  CLAUDE.md  README.md  _test_api.py  _test_imports.py  _test_payload.py  make_icon.py  pyproject.toml  quota_watch.spec  soc_claude_monitor.spec
linux/: README.md  claude-usage  fetch-claude-usage.py  install.sh  statusline-command.sh
monitor/: __main__.py  alerts.py  api.py  app.py  autostart.py  claude_cli.py  formatting.py  payload.py  popup.py  severity.py  tray.py
monitor/html/: popup.css  popup.html  popup.js
monitor/providers/: _http.py  antigravity.py  base.py  claude.py  codex.py  windsurf.py
tests/: test_bar_severity.py  test_http.py  test_provider_parse.py  test_severity.py  test_threshold_alerts.py
ux-ui improvement plan/: QuotaWatch Variants.dc.html  README.md  quotawatch-ui-reference.html
