[project]
name = "quota-watch"
version = "0.4.20"
description = "Multi-provider AI quota monitor (Claude, OpenAI Codex, Windsurf, Google Antigravity)"
requires-python = ">=3.11"
dependencies = [
    "pystray>=0.19",
    "pillow>=10.0",
    "pywebview>=4.0",
    "requests>=2.31",
]

[project.scripts]
quota-watch = "monitor.__main__:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
